--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "pwhash"
-version = "1.0.0"
-authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
-description = "A collection of password hashing routines in pure Rust."
-documentation = "https://inejge.github.io/pwhash"
-homepage = "https://github.com/inejge/pwhash"
-repository = "https://github.com/inejge/pwhash"
+name = "pw_hash"
+version = "0.1.0"
+authors = ["Ivan Nejgebauer <inejge@gmail.com>, Mark Firman <markfirn@gmail.com>"]
+description = "A collection of password hashing routines in pure Rust. Fork of pwhash by inejge."
+homepage = "https://github.com/NamesMark/pwhash"
+repository = "https://github.com/NamesMark/pwhash"
 readme = "README.md"
 license = "MIT"
 keywords = ["password", "hash", "hashing", "crypt"]
